--- a/generasi-gigih-homework/src/index.css
+++ b/generasi-gigih-homework/src/index.css
@@ -5,47 +5,112 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
   padding: 20px;
-  background-color: wheat;
+  background-color:rgb(238, 213, 211);
+  color: black;
 }
 
 .isi {
   padding: 2px;
-  display: inline;
 }
 
 .outer {
   width: 100%;
-  margin-top: 10px;
-  margin-left: 10px;
-  padding: 10px;
-  display: flex;
+  display: table;
+  margin-top: 20px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+  padding-bottom: -20px;
+  padding-left: 5px;
 }
 
 button {
-  background-color: teal;
+  background-color: rgb(236, 201, 226);
   border-radius: 0.5rem;
   padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: black;
+  width: 100px;
+  top:-20px;
+  border-color:transparent;
+}
+
+button:hover {
+  background-color: purple;
+  top:20px;
+  transition: 0.5s;
   color: white;
+  cursor: pointer;
 }
 
 .box {
-  margin-left: 20px;
   text-align: center;
-  width: 50%;
+  width: 200px;
+  height: 300px;
+  padding: 10px;
+  margin: 10px;
+  display: inline-table;
   background-color: rgb(250, 218, 215);
-  /* border: 1px solid #000; */
-  border-radius: 15px;
+  border-radius: 10px;
+  font-size: 14px;
+  color: purple;
+}
+
+.box:hover {
+  cursor:pointer;
+  background-color: rgb(233, 181, 176);
+  color:black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 20px;
+  transition: 0.5s;
+}
+
+.box2 {
+  text-align: right;
+  display: block;
+  height: 50px;
+  overflow: hidden;
+}
+
+.box2 input[type=text] {
+  float: right;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+.box2 h1 {
+  margin-top:5px;
+  float: left;
+}
+
+.box2 button {
+  float: right;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 input {
-  margin: 5px;
-  padding: 5px;
-  border: 1px solid #000;
-  border-radius: 50px;
+  padding: 10px;
+  width: 200px;
+  background-color: white;
+  color:  rgb(36, 32, 31);
+  border: none; 
+  border-radius: 2px;
+  margin-left: 10px;
+}
+
+input:focus {
+  padding: 10px;
+  width: 200px;
+  background-color:white;
+  color:  rgb(36, 32, 31);
+  border: none;
+  border-radius: 2px;
+  margin-left: 10px;
 }
 
 code {
