--- a/generasi-gigih-homework/src/index.css
+++ b/generasi-gigih-homework/src/index.css
@@ -5,9 +5,117 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 20px;
-  background-color:rgb(238, 213, 211);
-  color: black;
+  background: #403A3E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white;
+}
+
+h1 {
+  font-size: 30px;
+  padding: 15px;
+  font-weight: bolder;
+  color: whitesmoke;
+  text-align: left;
+  margin-left: 20px;
+}
+
+.wrap {
+  margin-left:25%;
+  padding:1px 16px;
+  min-height: 1000px;
+}
+
+.wrap2 {
+  margin: 0;
+  min-height: 1000px;
+}
+
+.wrap3 {
+  margin-top: 30px;
+  text-align: left;
+  padding: 10px;
+}
+
+.nav {
+  position: fixed;
+  z-index: 1;
+  float: right;
+  width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  color: white;
+  padding: 3px;
+  text-decoration: none;
+  background-color: #111;
+  border-radius: 5rem;
+  display: inline-flex;
+  float: right;
+  margin-right: 10px;
+  margin-top: 30px;
+}
+
+.navbar span {
+  padding-left:5px;
+  padding-top:10px;
+  padding-right:5px;
+}
+
+.navbar img {
+  border-radius: 10rem;
+  padding: 1px;
+}
+
+.navbar:hover {
+  background-color: rgb(207, 125, 120);
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.left-nav a.active {
+  color: white;
+  font-weight: bolder;
+}
+
+.left-nav a:hover:not(.active) {
+  font-weight: bold;
+  color: white;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.left-nav {
+  list-style-type: none;
+  padding: 0;
+  width: 25%;
+  background-color: rgb(58, 48, 48);
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.left-navbar a {
+  display: block;
+  color: white;
+  text-align: left;
+  margin-left: 20px;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.left-navbar a.active {
+  color: white;
+  font-weight: bolder;
+}
+
+.left-navbar a:hover:not(.active) {
+  font-weight: bold;
+  color: white;
+  transition: 0.5s;
 }
 
 .isi {
@@ -33,6 +141,7 @@ button, input[type=button] {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 10px;
   color: black;
   width: 100px;
   top:-20px;
@@ -40,7 +149,7 @@ button, input[type=button] {
 }
 
 button:hover, input[type=button]:hover {
-  background-color: purple;
+  background-color: rgb(207, 125, 120);;
   top:20px;
   transition: 0.5s;
   color: white;
@@ -50,11 +159,11 @@ button:hover, input[type=button]:hover {
 .box {
   text-align: center;
   width: 200px;
-  height: 300px;
   padding: 10px;
   margin: 10px;
   display: inline-table;
-  background-color: rgb(250, 218, 215);
+  background-color: rgb(197, 158, 154);
+  opacity: 0.9;
   border-radius: 10px;
   font-size: 14px;
   color: purple;
@@ -62,35 +171,22 @@ button:hover, input[type=button]:hover {
 
 .box:hover {
   cursor:pointer;
-  background-color: rgb(233, 181, 176);
+  background-color: rgb(241, 170, 163);
   color:black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: 0.5s;
+  opacity:2;
 }
 
 .box2 {
-  text-align: right;
-  display: block;
-  height: 50px;
-  overflow: hidden;
-}
-
-.box2 input[type=text] {
-  float: right;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.box2 h1 {
-  margin-top:5px;
-  float: left;
-}
-
-.box2 button {
-  float: right;
-  margin-right: 20px;
-  margin-left: 10px;
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+  display: inline-table;
+  background-color: rgb(250, 218, 215);
+  border-radius: 10px;
+  font-size: 14px;
+  color: black;
 }
 
 input {
@@ -116,4 +212,14 @@ input:focus {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color:whitesmoke;
+  text-decoration: none;
+}
+
+a:hover {
+  font-weight: bold;
+  transition: 0.5s;
 }
